JRUBY-884: -J option processing for jruby scripts and batch files
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3678 961051c9-f516-0410-bf72-c9f7e237a7b7