@@ -53,7 +53,8 @@ rem set _STARTJAVA=start "%JAVA_HOME%\bin\java"
 set _STARTJAVA="%JAVA_HOME%\bin\%JAVA_COMMAND%"
 :gotTitle
 
-set _VM_OPTS=-Xmx256m -Xss1024k -Xverify:none -da
+rem ----- Set up the VM options
+call "%~dp0_jrubyvmopts" %*
 set _RUNJAVA="%JAVA_HOME%\bin\java"
 
 rem ----- Set Up The Runtime Classpath ----------------------------------------
